--- a/package.json
+++ b/package.json
@@ -21,8 +21,21 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@reown/appkit": "^1.5.2",
+        "@reown/appkit-adapter-wagmi": "^1.5.2",
+        "@tanstack/vue-query": "^5.61.5",
         "@vee-validate/zod": "^4.14.7",
         "@vueuse/core": "^12.0.0",
+        "@wagmi/vue": "^0.0.65",
+        "@vue/eslint-config-standard": "^8.0.1",
+        "eslint": "^8.43.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-vue": "^9.15.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.462.0",
@@ -30,6 +43,7 @@
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
         "vee-validate": "^4.14.7",
+        "viem": "^2.21.51",
         "zod": "^3.23.8"
     }
 }
