--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,13 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mailersend/laravel-driver": "^2.7",
+        "resend/resend-php": "^0.14.0",
         "simplito/elliptic-php": "^1.0",
         "sopamo/laravel-filepond": "^1.4",
+        "symfony/http-client": "^7.2",
+        "symfony/mailgun-mailer": "^7.1",
+        "symfony/postmark-mailer": "^7.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
