--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@vueuse/components": "^12.0.0",
         "@vueuse/core": "^12.0.0",
         "@wagmi/vue": "^0.0.65",
+        "@wdns/vue-code-block": "^2.3.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "eslint": "^8.43.0",
@@ -52,6 +53,8 @@
         "tailwind-merge": "^2.5.5",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss-animate": "^1.0.7",
+        "uid": "^2.0.2",
+        "v-calendar": "^3.1.2",
         "vee-validate": "^4.14.7",
         "viem": "^2.21.51",
         "vue-filepond": "^7.0.4",
