--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "mailersend/laravel-driver": "^2.7",
         "resend/resend-php": "^0.14.0",
         "simplito/elliptic-php": "^1.0",
