Remove unused Ciontrollers

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=Memex
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GXc/CL3cLqH6MrkUbJ4BeYK39GniHRNOM/7TwXI5Auo=
 APP_DEBUG=true
+APP_DEMO=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL="http://localhost"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=memex
+DB_USERNAME=memex
+DB_PASSWORD=l4L6q6LDjNogx6cc
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -34,8 +35,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+BROADCAST_CONNECTION=reverb
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
@@ -44,23 +44,86 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_MAILER=resend
+MAIL_HOST="mailpit"
+MAIL_PORT="1025"
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="admin@scriptoshi.com"
+MAIL_FROM_NAME="Memex"
+#resend
+RESEND_KEY=
+#https://www.mailersend.com/
+MAILERSEND_API_KEY=
 
+#AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+#digitalocean spaces /linode objects
+DO_SPACES_KEY=
+DO_SPACES_SECRET=
+#DE, Frankfurt: eu-central-1.linodeobjects.com
+DO_SPACES_ENDPOINT=https://eu-central-1.linodeobjects.com
+DO_SPACES_REGION=eu-central-1
+DO_SPACES_BUCKET=cdn.scriptoshi.com
+DO_SPACES_CDN=https://cdn.scriptoshi.com/
+
+#options are public, aws, do
+# public is your server disk
+# aws uses s3 settings above
+# do user digitalocean spaces above
+PROFILE_PHOTO_DISK=public
+FILESYSTEM_DISK=public
 
 VITE_APP_NAME="${APP_NAME}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+MEILISEARCH_NO_ANALYTICS=false
+
+
+REVERB_APP_ID=489873
+REVERB_APP_KEY=sbf7mhlhmri46um457yw
+REVERB_APP_SECRET=n427b606x4nqx0knvy63
+REVERB_HOST="scriptoshi.com"
+REVERB_PORT=443
+REVERB_SCHEME=https
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+#usdrates api (free apikey https://coincap.io/api-key)
+COINCAP_APIKEY=
+#appkit project id: https://cloud.reown.com/
+PROJECT_ID=
+## Ankr apikey https://www.ankr.com/rpc/projects/
+ANKR_KEY=
+BLASTAPI_KEY=
+INFURA_KEY=
+GRAPH_APIKEY=
+VITE_PROJECT_ID="${PROJECT_ID}"
+VITE_PROJECT_URL="${APP_URL}"
+VITE_PROJECT_APP_NAME="${APP_NAME}"
+VITE_ANKR_KEY="${ANKR_KEY}"
+## List of adresses that have admin dashboard access
+ADMIN=
+#SOCIAL MEDIA
+TWITTER="https://x.com/memex"
+YOUTUBE="https://youtube.com/@memex"
+TELEGRAM_GROUP="https://t.me/memex"
+TELEGRAM_CHANNEL="https://t.me/memex"
+DISCORD="https://discord.gg/memex"
+DOCUMENTATION="https://docs.memex.io"
+
+
