--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
+        "@openzeppelin/contracts": "^5.3.0",
+        "@openzeppelin/contracts-upgradeable": "^5.3.0",
         "@reown/appkit": "^1.6.3",
         "@reown/appkit-adapter-wagmi": "^1.6.3",
         "@tanstack/vue-query": "^5.61.5",
